# sparrow-downloader

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: latest-json.yml  release.yml
scripts/: generate-icons.ps1
src/: app.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  process_ext.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/downloader/: mod.rs  progress.rs
src-tauri/src/extractor/: mod.rs
src-tauri/src/media/: mod.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/settings/: mod.rs
